Lil fixes in style.css

--- a/aboutus.html
+++ b/aboutus.html
@@ -35,7 +35,7 @@
                 </li>
             </ul>
         </nav>
-        <main class="main">
+        <main class="main main__about">
             <article class="card card--big card--bigger">
                 <h1 class="title--mobile">ABOUT BONZ.AI</h1>
                 <img class="card--bigger--img" src="photos/zen.jfif" alt="Picture of a lonely tree i the middle of a lake">
